2015-06-05  Gregory Soyez  <soyez@fastjet.fr>

	* README.md:
	updated the desctiption to match the discussion we had on
	Thursday; added a description of the workflow and of the results
	and tools.

	* post-process.sh:               *** ADDED ***
	added a script that (i) generate the separations (ii) do a bit of
	rebinning for aesthetic reasons (iii) produce a bunch of plots

	Note that by default existing files are not overwritten. Use
	FORCE=yes post-process.sh to overwrite everything.

	* yoda-rebin.py:                 *** ADDED ***
	added a simple script to rebin our output histograms
	Watch out: this applies to te specific histograms output byu our
	analysis where different histograms are not rebinned the same way

	* compute-efficiencies.py:
	added a few quality measures according to Jesse's tex file
	[only I1/2" saved as a histogram]

2015-06-04  Jesse Thaler <jthaler@mit.edu>

	* tex/lh2015_qg.tex   *** ADDED ***
	* tex/lh2015_qg.bib   *** ADDED ***
	* jheppub.sty         *** ADDED ***
	* jhep.bst            *** ADDED ***
	added tex file with description of classifier metric

	* tex/figures/roc_curve.pdf       *** ADDED ***
	* tex/figures/truth_overlap.pdf   *** ADDED ***
	add figures to help visualize information quantities to study

2015-06-04  Gregory Soyez  <soyez@fastjet.fr>

	* README.md:
	set the scales to study to multiples of 2

	* MC_LHQG_EE.plot:
	updated to include the labels for what comes out of the latest
	version of the analysis

	* compute-efficiencies.py:
	added a quick python script that computes (as a distribution)
	  (Q(x)-G(x))^2/(Q(x)+G(x))
	for a distribution of x.
	Use as
	  compute-efficiencies.py quark.yoda gluon.yoda output.yoda
	On top of giving the histograms, it also prints the integrated
	efficiencies

	* MC_LHQG_EE.cc:
	revamped the analysis to
	. hardcode much less things
	. include log-scaled binned angulatrity histograms
	. include 3 values of R
	. added thrust (lin and log scales)